fix error-3 unable to load script and css

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kurniawanportfolio.github.io/my-font",
+  "homepage": "http://kurniawanportfolio.github.io/myfont",
   "name": "unitygameproject",
   "private": true,
   "version": "0.0.0",
